# kongshan-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  config.example.toml  deny.toml  docker-compose.yml
.cargo/: audit.toml  config.toml
crates/agent/: Cargo.toml
crates/agent/src/: collect.rs  config.rs  docker.rs  logging.rs  main.rs  parsers.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_alerts.sql  0003_api_tokens.sql  0004_2fa.sql  0005_notes_status.sql  0006_rollup.sql  0007_alerts_p1.sql  0008_alert_roc.sql  0009_rbac.sql  0011_sort_order.sql  0012_last_ip.sql
crates/server/src/: alerts.rs  apiauth.rs  audit.rs  config.rs  db.rs  errors.rs  main.rs  middleware.rs  notify.rs  notify_smtp.rs  ratelimit.rs  retention.rs  session.rs  state.rs  totp.rs  traffic.rs  util.rs
crates/server/src/handlers/: account.rs  agent_api.rs  alerts.rs  apitokens.rs  auth.rs  dataout.rs  mod.rs  nodes.rs  pages.rs  settings.rs  status.rs  twofa.rs  users.rs  ws_agent.rs  ws_ui.rs
crates/server/static/: alerts.html  alerts.js  app.css  app.js  auth.js  chart.js  compare.html  compare.js  dashboard.js  index.html  install.sh  login.html  node.html  node.js  servers.html  servers.js  settings.html  settings.js  setup.html  status.html  status.js  uninstall.sh  upgrade.sh
deploy/: docker-entrypoint.sh  gen-pki.sh  nginx-outpost.conf  server.service
scripts/: build-release.sh  dev-db.sh  server-install.sh
