[package]
name = "outpost-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
outpost-common = { path = "../common" }

# 单线程运行时,内存足迹最小化(目标 < 15MB RSS)
tokio = { version = "1", features = ["rt", "macros", "time", "net", "io-util", "signal", "sync"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pki-types = { version = "1", features = ["std"] }
webpki-roots = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rustix = { version = "1", features = ["fs"] }
